[package]
name = "discriminator"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
heck = "0.4"
hex = "0.4"
serde_json = "1.0"
anchor-lang = "0.29"
clap = { version = "4.4", features = ["derive"] }
